@@ -1,154 +1,156 @@
-common	official	abbreviation	official_languages
-Abkhazia			Abkhaz, Russian
-Afganistan	Islamic Republic of Afghanistan		Dari, Southern Pashto, Central Pashto, Northern Pashto
-Albania	Republic of Albania		Northern Tosk Albanian
-Algeria	People's Democratic Republic of Algeria		Standard Arabic, Algerian Arabic, Western Algerian Berber
-Andorra	Principality of Andorra		Catalan
-Andorra	Principality of the Valleys of Andorra		
-Angola	Republic of Angola		Portuguese
-Antigua and Barbuda			English
-Argentina	Argentine Republic		Spanish
-Argentina	the Argentine		
-Armenia	Republic of Armenia		Armenian
-Australia	Commonwealth of Australia 		English
-Austria	Republic of Austria		German
-Azerbaijan	Republic of Azerbaijan		Azerbaijani
-Bahamas	Commonwealth of the Bahamas		English
-Bahrain	Kingdom of Bahrain		Standard Arabic
-Bangladesh	People's Republic of Bangladesh		Bengali
-Barbados			English
-Belarus	Republic of Belarus		Belarusian, Russian
-Belarus	Byelorussia		
-Belgium	Kingdom of Belgium		Dutch, French, German
-Belize			English
-Benin	Republic of Benin		French
-Bhutan	Kingdom of Bhutan		Dzongkha
-Bolivia	Plurinational State of Bolivia		Spanish, Central Aymara, Southern Aymara, Araona, Baure, Chiquitano, Canichana, Cavinena, Cayubaba, Chacobo, Moseten-Chimane, Ese Ejja, Eastern Bolivian Guarani, Western Bolivian Guarani, Pauserna, Guarayu, Itonama, Leco, Callawalla, Machinere, Reyesano, Trinitario, Ignaciano, Moseten-Chimane, Itene, Movima, Chacobo, Pacahuara, Karipuna (Pano-Tacanan), Shinabo, Puquina, North Bolivian Quechua, South Bolivian Quechua, Siriono, Jora, Yuqui, Tacana, Toromono, Chipaya, Uru, Zamuco, Ayoreo, Yuracare, Shanenawa, Sharanahua, Yaminahua, Yawanawa, Yora, Wichi Lhamtes Nocten
-Bosnia and Herzegovina		B&H	Bosnian, Croatian, Serbian
-Botswana	Republic of Botswana		English
-Brazil	Federative Republic of Brazil		Portuguese
-Brunei	Nation of Brunei, the Abode of Peace		English, Standard Malay
-Bulgaria	Republic of Bulgaria		Bulgarian
-Burkina Faso			French
-Burundi	Republic of Burundi		Rundi, Rundi-Kitwa, French, English
-Cambodia	Kingdom of Cambodia		Central Khmer, Northern Khmer
-Cameroon	Republic of Cameroon 		English, French
-Cape Verde	Cabo Verde		Portuguese
-Canada			English, French
-Central African Republic		CAR	French
-Chad	Republic of Chad		Chadian Arabic, Standard Arabic, French
-Chile	Republic of Chile		Spanish
-China	People's Republic of China		Mandarin Chinese
-Colombia	Republic of Colombia		Spanish
-Comoros	Union of the Comoros		French, Standard Arabic, Maore Comorian
-West Congo	Republic of Congo		French
-Congo	Democratic Republic of the Congo	DRC	
-Congo	Democratic Republic of the Congo	DR Congo	
-Congo	Democratic Republic of the Congo	DROC	French
-Costa Rica	Republic of Costa Rica		Spanish
-Croatia	Republic of Croatia		Croatian
-Cuba	Republic of Cuba		Spanish
-Cyprus	Republic of Cyprus		Modern Greek, Turkish
-Czech	Czech Republic		Czech, Slovak
-Djibouti	Republic of Djibouti		Standard Arabic, French
-Denmark	Kingdom of Denmark		Danish
-Dominica	Commonwealth of Dominica		English
-Dominican Republic			Spanish
-East Timor	Democratic Republic of Timor-Leste		Portuguese, Tetum
-Ecuador	Republic of Ecuador		Spanish
-Egypt	Arab Republic of Egypt		Egyptian Arabic, Standard Arabic
-El Salvador	Republic of El Salvador 		Spanish
-Equatorial Guinea	Republic of Equatorial Guinea		Spanish, French, Portuguese
-Estonia	Republic of Estonia		Estonian
-Eritrea	State of Eritrea		Standard Arabic, English, Tigrinya
-Ethiopia	Federal Democratic Republic of Ethiopia		Amharic
-Fiji	Republic of Fiji		English, Fijian, Fiji Hindi
-Finland	Republic of Finland		Finnish, Swedish
-France	French Republic		French
-Gabon	Gabonese Republic		French
-Gambia	Republic of the Gambia		English
-Georgia	Republic of Georgia		Georgian
-Germany	Federal Republic of Germany		German
-Ghana	Republic of Ghana		English
-Grenada			English
-Greece	Hellenic Republic		Modern Greek
-Guatemala	Republic of Guatemala		Spanish
-Guinea-Bissau	Republic of Guinea-Bissau		Portuguese
-Guinea	Republic of Guinea		French
-Guyana	Co-operative Republic of Guyana		English
-Haiti	Republic of Haiti		Haitian, French
-Honduras	Republic of Honduras		Spanish
-Hong Kong			Yue Chinese, Mandarin Chinese, English
-Hungary			Hungarian
-Iceland	Republic of Iceland		Icelandic, Icelandic Sign Language
-India	Republic of India		English, Hindi
-Indonesia	Republic of Indonesia		Indonesian, Indonesian Sign Language
-Iran	Islamic Republic of Iran		Western Farsi
-Iraq			Standard Arabic
-Ireland	Republic of Ireland		Irish, English
-Israel	State of Israel		Hebrew, Standard Arabic
-Italy	Italian Republic		Italian
-Ivory Coast	Cote d'Ivoire		French
-Jamaica			English
-Japan			Japanese
-Jordan	Hashemite Kingdom of Jordan		Standard Arabic
-Kazakhstan	Republic of Kazakhstan		Kazakh, Russian
-Kenya	Republic of Kenya		English, Swahili
-Kiribati	Republic of Kiribati		Gilbertese, English
-North Korea	Democratic People's Republic of Korea	DPRK	Korean
-South Korea	Republic of Korea	ROK	Korean
-Kosovo	Republic of Kosovo		Northern Tosk Albanian, Turkish
-Kuwait	State of Kuwait		Standard Arabic
-Kyrgyzstan	Kyrgyz Republic		Kirghiz, Russian
-Laos	Lao People's Democratic Republic		Lao
-Latvia	Republic of Latvia		Latvian
-Lebanon	The Lebanese Republic		Standard Arabic
-Lesotho	Kingdom of Lesotho		Southern Sotho, English
-Liberia	Republic of Liberia		English
-Libya			Libyan Arabic, Standard Arabic
-Liechtenstein	Principality of Liechtenstein		German
-Lithuania	Republic of Lithuania 		Lithuanian
-Luxembourg	Grand Duchy of Luxembourg		French, German, Luxembourgish
-Madagascar	Republic of Madagascar		
-Malawi	Republic of Malawi		
-Malaysia	Federation of Malaysia		
-Maldives	Republic of the Maldives		
-Mauritania	Islamic Republic of Mauritania		
-Mexico	United Mexican States		
-Macedonia	Republic of Macedonia		
-Moldova	Republic of Moldova		
-Morocco	Kingdom of Morocco		
-Myanmar	Republic of the Union of Myanmar		
-Netherlands	Kingdom of the Netherlands		
-New Zealand	Realm of New Zealand		
-Norway	Kingdom of Norway		
-Nepal	Federal Democratic Republic Of Nepal		
-Pakistan	Islamic Republic of Pakistan		
-Palau	Republic of Palau		
-Peru	Republic of Peru		
-Philippines	Republic of the Philippines		
-Poland	Republic of Poland		
-Portugal	Portuguese Republic		
-Puerto Rico	Commonwealth of Puerto Rico		
-Rwanda	Republic of Rwanda		
-Saint Kitts and Nevis	Federation of Saint Kitts and Nevis		
-Saint Kitts and Nevis	Federation of Saint Christopher and Nevis		
-Saudi Arabia	Kingdom of Saudi Arabia		
-Serbia	Republic of Serbia		
-Singapore	Republic of Singapore		
-Sri Lanka	Democratic Socialist Republic of Sri Lanka		
-Sudan	Republic of the Sudan		
-Suriname	Republic of Suriname		
-Switzerland	Swiss Confederation		
-Taiwan	Republic of China	ROC	
-Tanzania	United Republic of Tanzania		
-Thailand	Kingdom of Thailand		
-Togo	Togolese Republic		
-Trinidad and Tobago	Republic of Trinidad and Tobago		
-Turkey	Republic of Turkey 		
-United Arab Emirates		UAE	
-United Kingdom	United Kingdom of Great Britain and Northern Ireland 	UK	
-United States	United States of America	USA	
-Vietnam	Socialist Republic of Vietnam	SRV	
-Zambia	Republic of Zambia		
-Zimbabwe	Republic of Zimbabwe 		
+common,official,abbreviation,official_languages
+Abkhazia,,,"Abkhaz, Russian"
+Afganistan,Islamic Republic of Afghanistan,,"Dari, Southern Pashto, Central Pashto, Northern Pashto"
+Albania,Republic of Albania,,Northern Tosk Albanian
+Algeria,People's Democratic Republic of Algeria,,"Standard Arabic, Algerian Arabic, Western Algerian Berber"
+Andorra,Principality of Andorra,,Catalan
+Andorra,Principality of the Valleys of Andorra,,
+Angola,Republic of Angola,,Portuguese
+Antigua and Barbuda,,,English
+Argentina,Argentine Republic,,Spanish
+Argentina,the Argentine,,
+Armenia,Republic of Armenia,,Armenian
+Australia,Commonwealth of Australia ,,English
+Austria,Republic of Austria,,German
+Azerbaijan,Republic of Azerbaijan,,Azerbaijani
+Bahamas,Commonwealth of the Bahamas,,English
+Bahrain,Kingdom of Bahrain,,Standard Arabic
+Bangladesh,People's Republic of Bangladesh,,Bengali
+Barbados,,,English
+Belarus,Republic of Belarus,,"Belarusian, Russian"
+Belarus,Byelorussia,,
+Belgium,Kingdom of Belgium,,"Dutch, French, German"
+Belize,,,English
+Benin,Republic of Benin,,French
+Bhutan,Kingdom of Bhutan,,Dzongkha
+Bolivia,Plurinational State of Bolivia,,"Spanish, Central Aymara, Southern Aymara, Araona, Baure, Chiquitano, Canichana, Cavinena, Cayubaba, Chacobo, Moseten-Chimane, Ese Ejja, Eastern Bolivian Guarani, Western Bolivian Guarani, Pauserna, Guarayu, Itonama, Leco, Callawalla, Machinere, Reyesano, Trinitario, Ignaciano, Moseten-Chimane, Itene, Movima, Chacobo, Pacahuara, Karipuna (Pano-Tacanan), Shinabo, Puquina, North Bolivian Quechua, South Bolivian Quechua, Siriono, Jora, Yuqui, Tacana, Toromono, Chipaya, Uru, Zamuco, Ayoreo, Yuracare, Shanenawa, Sharanahua, Yaminahua, Yawanawa, Yora, Wichi Lhamtes Nocten"
+Bosnia and Herzegovina,,B&H,"Bosnian, Croatian, Serbian"
+Botswana,Republic of Botswana,,English
+Brazil,Federative Republic of Brazil,,Portuguese
+Brunei,"Nation of Brunei, the Abode of Peace",,"English, Standard Malay"
+Bulgaria,Republic of Bulgaria,,Bulgarian
+Burkina Faso,,,French
+Burundi,Republic of Burundi,,"Rundi, Rundi-Kitwa, French, English"
+Cambodia,Kingdom of Cambodia,,"Central Khmer, Northern Khmer"
+Cameroon,Republic of Cameroon ,,"English, French"
+Cape Verde,Cabo Verde,,Portuguese
+Canada,,,"English, French"
+Central African Republic,,CAR,French
+Chad,Republic of Chad,,"Chadian Arabic, Standard Arabic, French"
+Chile,Republic of Chile,,Spanish
+China,People's Republic of China,,Mandarin Chinese
+Colombia,Republic of Colombia,,Spanish
+Comoros,Union of the Comoros,,"French, Standard Arabic, Maore Comorian"
+West Congo,Republic of Congo,,French
+Congo,Democratic Republic of the Congo,DRC,
+Congo,Democratic Republic of the Congo,DR Congo,
+Congo,Democratic Republic of the Congo,DROC,French
+Costa Rica,Republic of Costa Rica,,Spanish
+Croatia,Republic of Croatia,,Croatian
+Cuba,Republic of Cuba,,Spanish
+Cyprus,Republic of Cyprus,,"Modern Greek, Turkish"
+Czech,Czech Republic,,"Czech, Slovak"
+Djibouti,Republic of Djibouti,,"Standard Arabic, French"
+Denmark,Kingdom of Denmark,,Danish
+Dominica,Commonwealth of Dominica,,English
+Dominican Republic,,,Spanish
+East Timor,Democratic Republic of Timor-Leste,,"Portuguese, Tetum"
+Ecuador,Republic of Ecuador,,Spanish
+Egypt,Arab Republic of Egypt,,"Egyptian Arabic, Standard Arabic"
+El Salvador,Republic of El Salvador ,,Spanish
+Equatorial Guinea,Republic of Equatorial Guinea,,"Spanish, French, Portuguese"
+Estonia,Republic of Estonia,,Estonian
+Eritrea,State of Eritrea,,"Standard Arabic, English, Tigrinya"
+Ethiopia,Federal Democratic Republic of Ethiopia,,Amharic
+Fiji,Republic of Fiji,,"English, Fijian, Fiji Hindi"
+Finland,Republic of Finland,,"Finnish, Swedish"
+France,French Republic,,French
+Gabon,Gabonese Republic,,French
+Gambia,Republic of the Gambia,,English
+Georgia,Republic of Georgia,,Georgian
+Germany,Federal Republic of Germany,,German
+Ghana,Republic of Ghana,,English
+Grenada,,,English
+Greece,Hellenic Republic,,Modern Greek
+Guatemala,Republic of Guatemala,,Spanish
+Guinea-Bissau,Republic of Guinea-Bissau,,Portuguese
+Guinea,Republic of Guinea,,French
+Guyana,Co-operative Republic of Guyana,,English
+Haiti,Republic of Haiti,,"Haitian, French"
+Honduras,Republic of Honduras,,Spanish
+Hong Kong,,,"Yue Chinese, Mandarin Chinese, English"
+Hungary,,,Hungarian
+Iceland,Republic of Iceland,,"Icelandic, Icelandic Sign Language"
+India,Republic of India,,"English, Hindi"
+Indonesia,Republic of Indonesia,,"Indonesian, Indonesian Sign Language"
+Iran,Islamic Republic of Iran,,Western Farsi
+Iraq,,,Standard Arabic
+Ireland,Republic of Ireland,,"Irish, English"
+Israel,State of Israel,,"Hebrew, Standard Arabic"
+Italy,Italian Republic,,Italian
+Ivory Coast,Cote d'Ivoire,,French
+Jamaica,,,English
+Japan,,,Japanese
+Jordan,Hashemite Kingdom of Jordan,,Standard Arabic
+Kazakhstan,Republic of Kazakhstan,,"Kazakh, Russian"
+Kenya,Republic of Kenya,,"English, Swahili"
+Kiribati,Republic of Kiribati,,"Gilbertese, English"
+North Korea,Democratic People's Republic of Korea,DPRK,Korean
+South Korea,Republic of Korea,ROK,Korean
+Kosovo,Republic of Kosovo,,"Northern Tosk Albanian, Turkish"
+Kuwait,State of Kuwait,,Standard Arabic
+Kyrgyzstan,Kyrgyz Republic,,"Kirghiz, Russian"
+Laos,Lao People's Democratic Republic,,Lao
+Latvia,Republic of Latvia,,Latvian
+Lebanon,The Lebanese Republic,,Standard Arabic
+Lesotho,Kingdom of Lesotho,,"Southern Sotho, English"
+Liberia,Republic of Liberia,,English
+Libya,,,"Libyan Arabic, Standard Arabic"
+Liechtenstein,Principality of Liechtenstein,,German
+Lithuania,Republic of Lithuania ,,Lithuanian
+Luxembourg,Grand Duchy of Luxembourg,,"French, German, Luxembourgish"
+Madagascar,Republic of Madagascar,,"Plateau Malagasy, French"
+Malawi,Republic of Malawi,,English
+Malaysia,Federation of Malaysia,,Standard Malay
+Maldives,Republic of the Maldives,,Dhivehi 
+Mauritania,Islamic Republic of Mauritania,,Standard Arabic
+Mexico,United Mexican States,,Spanish
+Macedonia,Republic of Macedonia,,Macedonian
+Moldova,Republic of Moldova,,Romanian
+Morocco,Kingdom of Morocco,,"Standard Arabic, Berber"
+Myanmar,Republic of the Union of Myanmar,,Central Moroccan Berber
+Netherlands,Kingdom of the Netherlands,,Dutch
+New Zealand,Realm of New Zealand,,"English, Maori, New Zealand Sign Language"
+Norway,Kingdom of Norway,,Norwegian
+Nepal,Federal Democratic Republic Of Nepal,,Nepali
+Pakistan,Islamic Republic of Pakistan,,"Urdu, English"
+Palau,Republic of Palau,,"English, Palauan"
+Peru,Republic of Peru,,"Spanish, Quechua, Aymara"
+Philippines,Republic of the Philippines,,"Filipino, English"
+Poland,Republic of Poland,,Polish
+Portugal,Portuguese Republic,,Portuguese
+Puerto Rico,Commonwealth of Puerto Rico,,"Spanish, English"
+Russia,Russian Federation,,Russian
+Rwanda,Republic of Rwanda,,"Kinyarwanda, English, French"
+Saint Kitts and Nevis,Federation of Saint Kitts and Nevis,,English
+Saint Kitts and Nevis,Federation of Saint Christopher and Nevis,,
+Saudi Arabia,Kingdom of Saudi Arabia,,Standard Arabic
+Serbia,Republic of Serbia,,Serbian
+Singapore,Republic of Singapore,,"English, Standard Malay, Mandarin Chinese, Tamil"
+Sri Lanka,Democratic Socialist Republic of Sri Lanka,,"Sinhala, Tamil"
+Sudan,Republic of the Sudan,,"Arabic, English"
+Suriname,Surinam,,Dutch
+Suriname,Republic of Suriname,,
+Switzerland,Swiss Confederation,,"German, French, Italian, Romansh"
+Taiwan,Republic of China,ROC,Mandarin Chinese
+Tanzania,United Republic of Tanzania,,Swahili
+Thailand,Kingdom of Thailand,,Thai
+Togo,Togolese Republic,,French
+Trinidad and Tobago,Republic of Trinidad and Tobago,,English
+Turkey,Republic of Turkey ,,Turkish
+United Arab Emirates,,UAE,Standard Arabic
+United Kingdom,United Kingdom of Great Britain and Northern Ireland ,UK,English
+United States,United States of America,USA,English
+Vietnam,Socialist Republic of Vietnam,SRV,Vietnamese
+Zambia,Republic of Zambia,,English
+Zimbabwe,Republic of Zimbabwe ,,"English, Nyanja, Sena, Kalanga, Tsoa, Nambya, Ndau, Zimbabwean Ndebele, Tsonga, Zimbabwe Sign Language, Southern Sotho, Tonga (Zambia), Tswana, Venda, Xhosa"
